runs/github.com/n/numba/numba-examples/logs/test-notebook-tutorials-nasa_apps_oct_2019-1 - Numba basics.ipynb-2020-07-03T06.20.txt
[I 200703 06:30:29 inrepo:35] Testing notebook tutorials/nasa_apps_oct_2019/1 - Numba basics.ipynb
[I 200703 06:30:31 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# first select the `float64` signature
my_sig = # You write this!
print(my_sig)

# Level 1, print the types using `.inspect_types()`, make sure to specify the `signature` kwarg
print(add_one.inspect_types())
------------------

[0;36m  File [0;32m"<ipython-input-7-d8e56fbce538>"[0;36m, line [0;32m2[0m
[0;31m    my_sig = # You write this![0m
[0m             ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-7-d8e56fbce538>, line 2)


Container exited with status: {'Error': None, 'StatusCode': 1}
